adds Kafka - Fluss - Kafka via Flink Datastream API